[project]
name = "reactagentstest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery==5.5.3",
    "concurrent-log-handler==0.9.28",
    "fastapi==0.115.12",
    "langchain==0.3.25",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai==0.3.17",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-postgres==2.0.21",
    "redis==6.2.0",
    "rich==14.0.0",
    "uvicorn>=0.35.0",
]
